Remove JVM_ARGS conditional for obsolete Java versions
Gradle has required Java 8 to run since Gradle 5.0

Signed-off-by: Matthew Haughton <3flex@users.noreply.github.com>